--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
             border-radius: 12px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             width: 90%;
-            max-width: 600px;
+            max-width: 1000px;
+            display: flex;
+            gap: 2rem;
+        }
+        .selection-window {
+            flex: 1;
+        }
+        .log-window {
+            flex: 1;
+            margin-top: 0;
         }
         .row {
             display: flex;
@@ -58,7 +67,6 @@
         button {
             font-size: 1rem;
             padding: 0.8rem 1.5rem;
-            margin-top: 1.5rem;
             border: none;
             border-radius: 6px;
             cursor: pointer;
@@ -89,33 +97,55 @@
         button:active {
             transform: scale(0.98);
         }
+        #log {
+            padding: 1rem;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            width: 100%;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+        .button-row {
+            display: flex;
+            gap: 1rem;
+            margin-top: 1.5rem;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Excel 数据匹配工具</h1>
-        <div class="row">
-            <label for="fileA">请选择 A 表文件</label>
-            <input type="file" id="fileA" accept=".xlsx, .xls">
+        <div class="selection-window">
+            <h1>Excel 数据匹配工具</h1>
+            <div class="row">
+                <label for="fileA">请选择 A 表文件</label>
+                <input type="file" id="fileA" accept=".xlsx, .xls">
+            </div>
+            <div class="row">
+                <label for="filterA">筛选 A 表</label>
+                <select id="filterA" style="display: none;"></select>
+            </div>
+            <div class="row">
+                <label for="valueColumn">取值列</label>
+                <select id="valueColumn" style="display: none;"></select>
+            </div>
+            <div class="row">
+                <label for="fileB">请选择 B 表文件</label>
+                <input type="file" id="fileB" accept=".xlsx, .xls">
+            </div>
+            <div class="row">
+                <label for="filterB">筛选 B 表</label>
+                <select id="filterB" style="display: none;"></select>
+            </div>
+            <div class="button-row">
+                <button class="process" onclick="processFiles()">执行合并</button>
+                <button class="download" id="downloadButton" onclick="downloadFile()">下载填充后的 B 表</button>
+            </div>
         </div>
-        <div class="row">
-            <label for="filterA">筛选 A 表</label>
-            <select id="filterA" style="display: none;"></select>
+        <div class="log-window">
+            <h2>运行日志</h2>
+            <div id="log"></div>
         </div>
-        <div class="row">
-            <label for="valueColumn">取值列</label>
-            <select id="valueColumn" style="display: none;"></select>
-        </div>
-        <div class="row">
-            <label for="fileB">请选择 B 表文件</label>
-            <input type="file" id="fileB" accept=".xlsx, .xls">
-        </div>
-        <div class="row">
-            <label for="filterB">筛选 B 表</label>
-            <select id="filterB" style="display: none;"></select>
-        </div>
-        <button class="process" onclick="processFiles()">执行合并</button>
-        <button class="download" id="downloadButton" onclick="downloadFile()">下载填充后的 B 表</button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
@@ -131,7 +161,41 @@
 
         document.getElementById('fileB').addEventListener('change', function(event) {
             fileB = event.target.files[0];
-            populateFilterOptions(fileB, 'filterB');
+            if (window.Worker) {
+                const worker = new Worker(URL.createObjectURL(new Blob([`
+                    importScripts('https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js');
+                    onmessage = function(e) {
+                        const file = e.data;
+                        const reader = new FileReader();
+                        reader.onload = function(e) {
+                            const data = new Uint8Array(e.target.result);
+                            const workbook = XLSX.read(data, { type: 'array' });
+                            const worksheet = workbook.Sheets[workbook.SheetNames[0]];
+                            const headers = XLSX.utils.sheet_to_json(worksheet, { header: 1 })[0];
+                            postMessage(headers);
+                        };
+                        reader.readAsArrayBuffer(file);
+                    };
+                `], { type: 'text/javascript' })));
+
+                worker.onmessage = function(e) {
+                    const headers = e.data;
+                    const filterSelect = document.getElementById('filterB');
+                    filterSelect.innerHTML = '';
+                    headers.forEach(header => {
+                        const option = document.createElement('option');
+                        option.value = header;
+                        option.text = header;
+                        filterSelect.appendChild(option);
+                    });
+                    filterSelect.style.display = 'block';
+                };
+
+                worker.postMessage(fileB);
+            } else {
+                // 不支持 Web Worker 则使用原方法
+                populateFilterOptions(fileB, 'filterB');
+            }
         });
 
         function populateFilterOptions(file, filterId) {
@@ -141,7 +205,7 @@
                 const workbook = XLSX.read(data, { type: 'array' });
                 const worksheet = workbook.Sheets[workbook.SheetNames[0]];
                 const headers = XLSX.utils.sheet_to_json(worksheet, { header: 1 })[0];
-                
+
                 const filterSelect = document.getElementById(filterId);
                 filterSelect.innerHTML = '';
                 headers.forEach(header => {
@@ -149,6 +213,9 @@
                     option.value = header;
                     option.text = header;
                     filterSelect.appendChild(option);
+                    if (filterId === 'filterA' && header === '运单号') {
+                        option.selected = true;
+                    }
                 });
                 filterSelect.style.display = 'block';
             };
@@ -177,21 +244,28 @@
         }
 
         function processFiles() {
+            const log = document.getElementById('log');
+            log.innerHTML = '';
+
             if (!fileA || !fileB) {
-                alert('请上传两个 Excel 文件！');
+                log.innerHTML += '<p>请上传两个 Excel 文件！</p>';
                 return;
             }
+
+            log.innerHTML += '<p>开始读取文件...</p>';
 
             const readerA = new FileReader();
             const readerB = new FileReader();
 
             readerA.onload = function(e) {
+                log.innerHTML += '<p>A 表文件读取完成。</p>';
                 const dataA = new Uint8Array(e.target.result);
                 const workbookA = XLSX.read(dataA, { type: 'array' });
                 const worksheetA = workbookA.Sheets[workbookA.SheetNames[0]];
                 const jsonA = XLSX.utils.sheet_to_json(worksheetA, { defval: '', raw: false });
 
                 readerB.onload = function(e) {
+                    log.innerHTML += '<p>B 表文件读取完成。</p>';
                     const dataB = new Uint8Array(e.target.result);
                     const workbookB = XLSX.read(dataB, { type: 'array' });
                     const worksheetB = workbookB.Sheets[workbookB.SheetNames[0]];
@@ -202,18 +276,19 @@
                     const filterB = document.getElementById('filterB').value;
 
                     if (!jsonA[0].hasOwnProperty(filterA)) {
-                        alert(`A 表中缺少 '${filterA}' 列。`);
+                        log.innerHTML += `<p>A 表中缺少 '${filterA}' 列。</p>`;
                         return;
                     }
                     if (!jsonA[0].hasOwnProperty(valueColumn)) {
-                        alert(`A 表中缺少 '${valueColumn}' 列。`);
+                        log.innerHTML += `<p>A 表中缺少 '${valueColumn}' 列。</p>`;
                         return;
                     }
                     if (!dfB[0].hasOwnProperty(filterB)) {
-                        alert(`B 表中缺少 '${filterB}' 列。`);
+                        log.innerHTML += `<p>B 表中缺少 '${filterB}' 列。</p>`;
                         return;
                     }
 
+                    log.innerHTML += '<p>开始构建匹配映射...</p>';
                     const valueMap = {};
                     jsonA.forEach(row => {
                         if (row[filterA]) {
@@ -221,16 +296,17 @@
                         }
                     });
 
+                    log.innerHTML += '<p>开始进行数据匹配...</p>';
                     dfB.forEach(row => {
                         row['取值'] = valueMap[row[filterB]] || '';
                     });
 
                     const matchedCount = dfB.filter(row => row['取值']).length;
                     if (matchedCount > 0) {
-                        alert(`比对完成！共匹配到 ${matchedCount} 条数据。`);
+                        log.innerHTML += `<p>比对完成！共匹配到 ${matchedCount} 条数据。</p>`;
                         document.getElementById('downloadButton').style.display = 'block';
                     } else {
-                        alert("未匹配到数据，请检查以下几点：\n1. 确保 A 表和 B 表中运单号和单号的格式一致。\n2. 确保 A 表中的运单号和 B 表中的单号存在对应关系。");
+                        log.innerHTML += '<p>未匹配到数据，请检查以下几点：<br>1. 确保 A 表和 B 表中运单号和单号的格式一致。<br>2. 确保 A 表中的运单号和 B 表中的单号存在对应关系。</p>';
                     }
                 };
                 readerB.readAsArrayBuffer(fileB);
@@ -239,10 +315,13 @@
         }
 
         function downloadFile() {
+            const log = document.getElementById('log');
             if (!dfB) {
-                alert('请先上传 B 表文件！');
+                log.innerHTML += '<p>请先上传 B 表文件！</p>';
                 return;
             }
+
+            log.innerHTML += '<p>开始生成填充后的 B 表...</p>';
 
             const headers = Object.keys(dfB[0]);
             const costColumnIndex = 6; // G 列索引为 6
@@ -305,7 +384,7 @@
 
             const defaultOutputFile = fileB.name.replace(/(\.[\w\d_-]+)$/i, '_填充后$1');
             XLSX.writeFile(wb, defaultOutputFile);
-            alert(`填充数据已保存为: ${defaultOutputFile}`);
+            log.innerHTML += `<p>填充数据已保存为: ${defaultOutputFile}</p>`;
         }
     </script>
 </body>
